ConjuntoDeFerramentas/radarr/radarr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: home-media
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/issuer: "selfsigned"
spec:
  tls:
    - hosts:
        - radarr.rancher-ks8.pve.datacenter.tsc
      secretName: tls-secret-radarr
  rules:
    - host: radarr.rancher-ks8.pve.datacenter.tsc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-service
                port:
                  number: 80
